c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_lex/yet_another_bad_constant.c
int main(void)
{
    return 1.e-10x;
}